--- a/defconfig/bcmrpi3_defconfig
+++ b/defconfig/bcmrpi3_defconfig
@@ -11,6 +11,8 @@ CONFIG_TASKSTATS=y
 CONFIG_TASK_DELAY_ACCT=y
 CONFIG_TASK_XACCT=y
 CONFIG_TASK_IO_ACCOUNTING=y
+CONFIG_RCU_EXPERT=y
+CONFIG_RCU_BOOST=y
 CONFIG_IKCONFIG=m
 CONFIG_IKCONFIG_PROC=y
 CONFIG_MEMCG=y
@@ -30,9 +32,6 @@ CONFIG_BLK_DEV_INITRD=y
 CONFIG_EMBEDDED=y
 CONFIG_PROFILING=y
 CONFIG_ARCH_BCM2835=y
-# CONFIG_CAVIUM_ERRATUM_22375 is not set
-# CONFIG_CAVIUM_ERRATUM_23154 is not set
-# CONFIG_CAVIUM_ERRATUM_27456 is not set
 CONFIG_SCHED_MC=y
 CONFIG_NR_CPUS=4
 CONFIG_HZ_1000=y
@@ -42,11 +41,10 @@ CONFIG_SWP_EMULATION=y
 CONFIG_CP15_BARRIER_EMULATION=y
 CONFIG_SETEND_EMULATION=y
 CONFIG_RANDOMIZE_BASE=y
-CONFIG_CMDLINE="console=ttyAMA0,115200 kgdboc=ttyAMA0,115200 root=/dev/mmcblk0p2 rootfstype=ext4 rootwait"
+CONFIG_CMDLINE="console=ttyAMA0,115200 kgdboc=ttyAMA0,115200"
 # CONFIG_SUSPEND is not set
 CONFIG_PM=y
 CONFIG_CPU_IDLE=y
-CONFIG_ARM_CPUIDLE=y
 CONFIG_CPU_FREQ=y
 CONFIG_CPU_FREQ_STAT=y
 CONFIG_CPU_FREQ_DEFAULT_GOV_POWERSAVE=y
@@ -57,18 +55,20 @@ CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
 CONFIG_CPU_FREQ_GOV_SCHEDUTIL=y
 CONFIG_CPUFREQ_DT=y
 CONFIG_ARM_RASPBERRYPI_CPUFREQ=y
-CONFIG_CRYPTO_SHA1_ARM64_CE=m
-CONFIG_CRYPTO_SHA2_ARM64_CE=m
-CONFIG_CRYPTO_SHA512_ARM64_CE=m
-CONFIG_CRYPTO_SHA3_ARM64=m
+CONFIG_CRYPTO_SHA1_ARM64_CE=y
+CONFIG_CRYPTO_SHA2_ARM64_CE=y
+CONFIG_CRYPTO_SHA512_ARM64_CE=y
+CONFIG_CRYPTO_SHA3_ARM64=y
 CONFIG_CRYPTO_SM3_ARM64_CE=m
 CONFIG_CRYPTO_SM4_ARM64_CE=m
 CONFIG_CRYPTO_SM4_ARM64_CE_BLK=m
 CONFIG_CRYPTO_SM4_ARM64_NEON_BLK=m
 CONFIG_CRYPTO_GHASH_ARM64_CE=m
-CONFIG_CRYPTO_AES_ARM64=m
-CONFIG_CRYPTO_AES_ARM64_CE_CCM=m
-CONFIG_CRYPTO_AES_ARM64_CE_BLK=m
+CONFIG_CRYPTO_POLYVAL_ARM64_CE=m
+CONFIG_CRYPTO_AES_ARM64=y
+CONFIG_CRYPTO_AES_ARM64_CE_CCM=y
+CONFIG_CRYPTO_AES_ARM64_CE_BLK=y
+CONFIG_CRYPTO_AES_ARM64_NEON_BLK=y
 CONFIG_CRYPTO_AES_ARM64_BS=m
 CONFIG_JUMP_LABEL=y
 CONFIG_MODULES=y
@@ -85,6 +85,8 @@ CONFIG_ZSWAP=y
 CONFIG_ZSWAP_DEFAULT_ON=y
 CONFIG_Z3FOLD=y
 # CONFIG_COMPAT_BRK is not set
+CONFIG_PAGE_REPORTING=y
+CONFIG_KSM=y
 CONFIG_CMA=y
 CONFIG_NET=y
 CONFIG_PACKET=y
@@ -418,11 +420,6 @@ CONFIG_YAM=m
 CONFIG_CAN=m
 CONFIG_CAN_J1939=m
 CONFIG_CAN_ISOTP=m
-CONFIG_CAN_VCAN=m
-CONFIG_CAN_MCP251X=m
-CONFIG_CAN_MCP251XFD=m
-CONFIG_CAN_EMS_USB=m
-CONFIG_CAN_PEAK_USB=m
 CONFIG_BT=m
 CONFIG_BT_RFCOMM=m
 CONFIG_BT_RFCOMM_TTY=y
@@ -455,6 +452,7 @@ CONFIG_NFC=m
 CONFIG_UEVENT_HELPER=y
 CONFIG_DEVTMPFS=y
 CONFIG_DEVTMPFS_MOUNT=y
+CONFIG_CONNECTOR=y
 CONFIG_RASPBERRYPI_FIRMWARE=y
 CONFIG_SYSFB_SIMPLEFB=y
 CONFIG_EFI_VARS_PSTORE=m
@@ -561,6 +559,11 @@ CONFIG_BCMGENET=y
 # CONFIG_NET_VENDOR_WIZNET is not set
 # CONFIG_NET_VENDOR_XILINX is not set
 CONFIG_AX88796B_PHY=m
+CONFIG_CAN_VCAN=m
+CONFIG_CAN_MCP251X=m
+CONFIG_CAN_MCP251XFD=m
+CONFIG_CAN_EMS_USB=m
+CONFIG_CAN_PEAK_USB=m
 CONFIG_MDIO_BITBANG=m
 CONFIG_PPP=m
 CONFIG_PPP_BSDCOMP=m
@@ -720,7 +723,7 @@ CONFIG_GPIO_ARIZONA=m
 CONFIG_GPIO_STMPE=y
 CONFIG_GPIO_MAX7301=m
 CONFIG_GPIO_MOCKUP=m
-CONFIG_W1=m
+CONFIG_W1=y
 CONFIG_W1_MASTER_DS2490=m
 CONFIG_W1_MASTER_DS2482=m
 CONFIG_W1_MASTER_DS1WM=m
@@ -768,6 +771,8 @@ CONFIG_GENERIC_ADC_THERMAL=m
 CONFIG_WATCHDOG=y
 CONFIG_GPIO_WATCHDOG=m
 CONFIG_BCM2835_WDT=y
+CONFIG_SSB=y
+CONFIG_BCMA=y
 CONFIG_MFD_STMPE=y
 CONFIG_STMPE_SPI=y
 CONFIG_MFD_SYSCON=y
@@ -808,7 +813,8 @@ CONFIG_IR_TTUSBIR=m
 CONFIG_RC_ATI_REMOTE=m
 CONFIG_RC_LOOPBACK=m
 CONFIG_MEDIA_CEC_RC=y
-CONFIG_MEDIA_SUPPORT=m
+CONFIG_MEDIA_SUPPORT=y
+CONFIG_VIDEO_DEV=m
 CONFIG_MEDIA_USB_SUPPORT=y
 CONFIG_VIDEO_CPIA2=m
 CONFIG_USB_GSPCA=m
@@ -863,7 +869,6 @@ CONFIG_USB_M5602=m
 CONFIG_USB_STV06XX=m
 CONFIG_USB_PWC=m
 CONFIG_USB_S2255=m
-CONFIG_USB_STKWEBCAM=m
 CONFIG_VIDEO_USBTV=m
 CONFIG_USB_VIDEO_CLASS=m
 CONFIG_USB_ZR364XX=m
@@ -1231,7 +1236,7 @@ CONFIG_DMA_BCM2835=y
 CONFIG_DMABUF_HEAPS=y
 CONFIG_DMABUF_HEAPS_SYSTEM=y
 CONFIG_DMABUF_HEAPS_CMA=y
-CONFIG_UIO=m
+CONFIG_UIO=y
 CONFIG_UIO_PDRV_GENIRQ=m
 CONFIG_UIO_DMEM_GENIRQ=m
 CONFIG_VHOST_VSOCK=m
@@ -1253,7 +1258,7 @@ CONFIG_BCM2835_MBOX=y
 CONFIG_RASPBERRYPI_POWER=y
 CONFIG_EXTCON_GPIO=m
 CONFIG_EXTCON_USB_GPIO=m
-CONFIG_IIO=m
+CONFIG_IIO=y
 CONFIG_IIO_BUFFER_CB=m
 CONFIG_IIO_BUFFER_DMAENGINE=m
 CONFIG_IIO_BUFFER_HW_CONSUMER=m
@@ -1292,7 +1297,6 @@ CONFIG_PWM_RASPBERRYPI_POE=y
 CONFIG_RESET_RASPBERRYPI=m
 CONFIG_PHY_CAN_TRANSCEIVER=m
 CONFIG_BCM_KONA_USB2_PHY=m
-CONFIG_ANDROID=y
 CONFIG_ANDROID_BINDER_IPC=y
 CONFIG_ANDROID_BINDERFS=y
 CONFIG_NVMEM_RMEM=m
