--- a/defconfig/meson64_defconfig
+++ b/defconfig/meson64_defconfig
@@ -110,8 +110,12 @@ CONFIG_CMA=y
 CONFIG_CMA_DEBUGFS=y
 CONFIG_NET=y
 CONFIG_PACKET=y
+CONFIG_PACKET_DIAG=m
 CONFIG_UNIX=y
+CONFIG_UNIX_DIAG=m
 CONFIG_TLS=y
+CONFIG_XFRM_USER=m
+CONFIG_NET_KEY=m
 CONFIG_INET=y
 CONFIG_IP_MULTICAST=y
 CONFIG_IP_ADVANCED_ROUTER=y
@@ -119,9 +123,14 @@ CONFIG_IP_MULTIPLE_TABLES=y
 CONFIG_IP_PNP=y
 CONFIG_IP_PNP_DHCP=y
 CONFIG_IP_PNP_BOOTP=y
+CONFIG_IP_PNP_RARP=y
+CONFIG_NET_IPIP=m
 CONFIG_IP_MROUTE=y
 CONFIG_NET_FOU=m
-# CONFIG_INET_DIAG is not set
+CONFIG_INET_IPCOMP=m
+CONFIG_INET_DIAG=m
+CONFIG_INET_UDP_DIAG=m
+CONFIG_INET_RAW_DIAG=m
 CONFIG_TCP_CONG_ADVANCED=y
 # CONFIG_TCP_CONG_BIC is not set
 # CONFIG_TCP_CONG_WESTWOOD is not set
@@ -160,10 +169,21 @@ CONFIG_IP6_NF_FILTER=m
 CONFIG_IP6_NF_TARGET_REJECT=m
 CONFIG_IP6_NF_MANGLE=m
 CONFIG_IP6_NF_NAT=m
+CONFIG_BPFILTER=y
 CONFIG_BRIDGE=m
+CONFIG_BRIDGE_VLAN_FILTERING=y
 CONFIG_VLAN_8021Q=m
+CONFIG_ATALK=m
+CONFIG_DEV_APPLETALK=m
+CONFIG_IPDDP=m
+CONFIG_IPDDP_ENCAP=y
+CONFIG_6LOWPAN=m
+CONFIG_IEEE802154=m
 CONFIG_NET_SCHED=y
 CONFIG_NET_SCH_FQ_CODEL=y
+CONFIG_NETLINK_DIAG=m
+CONFIG_CGROUP_NET_PRIO=y
+CONFIG_CGROUP_NET_CLASSID=y
 CONFIG_BT=m
 CONFIG_BT_RFCOMM=m
 CONFIG_BT_RFCOMM_TTY=y
@@ -224,6 +244,7 @@ CONFIG_NFC_S3FWRN5_I2C=m
 CONFIG_NFC_S3FWRN82_UART=m
 CONFIG_NFC_ST95HF=m
 CONFIG_LWTUNNEL=y
+CONFIG_PAGE_POOL_STATS=y
 CONFIG_FAILOVER=m
 CONFIG_PCI=y
 CONFIG_PCIEPORTBUS=y
@@ -278,6 +299,8 @@ CONFIG_DM_CRYPT=m
 CONFIG_DM_INIT=y
 CONFIG_DM_UEVENT=y
 CONFIG_NETDEVICES=y
+CONFIG_BONDING=m
+CONFIG_DUMMY=m
 CONFIG_WIREGUARD=y
 CONFIG_MACVLAN=y
 CONFIG_MACVTAP=m
