--- a/defconfig/rockchip_defconfig
+++ b/defconfig/rockchip_defconfig
@@ -764,6 +764,11 @@ CONFIG_SND_MIXER_OSS=y
 CONFIG_SND_PCM_OSS=y
 CONFIG_SND_HRTIMER=y
 # CONFIG_SND_SUPPORT_OLD_API is not set
+CONFIG_SND_SEQUENCER=m
+CONFIG_SND_SEQUENCER_OSS=m
+# CONFIG_SND_DRIVERS is not set
+# CONFIG_SND_PCI is not set
+CONFIG_SND_ARMAACI=m
 CONFIG_SND_USB_AUDIO=y
 CONFIG_SND_SOC=y
 CONFIG_SND_SOC_ADI=y
@@ -777,13 +782,15 @@ CONFIG_SND_SOC_ROCKCHIP_SPDIF=y
 CONFIG_SND_SOC_ROCKCHIP_MAX98090=y
 CONFIG_SND_SOC_ROCKCHIP_RT5645=y
 CONFIG_SND_SOC_RK3288_HDMI_ANALOG=y
-CONFIG_SND_SOC_RK3399_GRU_SOUND=y
 CONFIG_SND_SOC_XTFPGA_I2S=m
 CONFIG_SND_SOC_AC97_CODEC=m
 CONFIG_SND_SOC_ALC5623=m
 CONFIG_SND_SOC_BT_SCO=y
+CONFIG_SND_SOC_DMIC=y
 CONFIG_SND_SOC_ES8316=y
-CONFIG_SND_SOC_RK3328=y
+CONFIG_SND_SOC_INNO_RK3036=m
+CONFIG_SND_SOC_MAX98357A=y
+CONFIG_SND_SOC_RK3328=m
 CONFIG_SND_SOC_RK817=m
 CONFIG_SND_SOC_RT5616=m
 CONFIG_SND_SOC_RT5631=m
