--- a/lib/dialog/config
+++ b/lib/dialog/config
@@ -1,7 +1,7 @@
 #!/bin/bash
 
 # builder version
-BUILDER="5.3"
+BUILDER="5.4"
 
 # script
 if [[ `curl -I https://github.com 2>&1 | grep 'HTTP/2 200'` ]]; then
@@ -208,7 +208,7 @@ echo "" >> custom.txt
 echo "# UEFI Options: true false" >> custom.txt
 echo 'ENABLE_EFI="false"' >> custom.txt
 echo "" >> custom.txt
-echo "# Compression Types: xz zstd" >> custom.txt
+echo "# Compression Types: xz zst" >> custom.txt
 echo 'IMG_COMPRESSION="xz"' >> custom.txt
 echo "" >> custom.txt
 echo "### DO NOT EDIT BELOW THIS LINE" >> custom.txt
