--- a/defconfig/bcmrpi3_defconfig
+++ b/defconfig/bcmrpi3_defconfig
@@ -31,6 +31,7 @@ CONFIG_SCHED_AUTOGROUP=y
 CONFIG_BLK_DEV_INITRD=y
 CONFIG_EMBEDDED=y
 CONFIG_PROFILING=y
+CONFIG_ARCH_BCM=y
 CONFIG_ARCH_BCM2835=y
 CONFIG_SCHED_MC=y
 CONFIG_NR_CPUS=4
